--- a/README.html
+++ b/README.html
@@ -352,11 +352,22 @@ display: none;
 </div>
 
 
-<div id="crosslag" class="section level1">
-<h1>CrossLag</h1>
-<div id="a-package-to-explore-the-chracteristics-and-estimators-of-of-the-cross-lagged-regression-model" class="section level2">
-<h2>A package to explore the chracteristics and estimators of of the
-Cross-Lagged Regression Model</h2>
+<div id="textttcrosslag-the-cross-lagged-regression-design" class="section level1">
+<h1><span class="math inline">\(\texttt{crossLag}\)</span>: The Cross
+Lagged Regression Design</h1>
+<div id="a-package-to-estimate-latent-variable-panel-models-and-simulation-designs" class="section level3">
+<h3>A package to estimate latent variable panel models and simulation
+designs</h3>
+<p>Christopher Weber, PhD</p>
+<p>Unviversity of Arizona</p>
+<p>School of Government and Public Policy</p>
+</div>
+<div id="installation" class="section level3">
+<h3>Installation</h3>
+<pre class="r"><code>devtools::install_github(&quot;crweber9874/crossLag&quot;)</code></pre>
+</div>
+<div id="summary" class="section level3">
+<h3>Summary</h3>
 <p>This package develops an analytic framework to analyze panel data in
 the tradition of the Cross Lagged Panel Model – the CLPM. This
 repository contains code written by Stanley Feldman, Adam Parish and
@@ -373,6 +384,19 @@ and strength of causal relationships.</p>
 for the CLR model can be expanded to incorporate commonly encountered
 data issues arising with the CLPM, mediation, confounding, and
 collision.</p>
+</div>
+<div id="structur" class="section level3">
+<h3>Structur</h3>
+<ul>
+<li><p><span class="math inline">\(\texttt{~/R}\)</span>. The functions
+used in the simulation and R-package.</p></li>
+<li><p><span class="math inline">\(\texttt{~/vignettes}\)</span>. Brief
+vignettes on data used in the simulation and the R-package.</p></li>
+<li><p><span class="math inline">\(\texttt{~/presentations}\)</span>.
+Presentations on the CLPM and the R-package.</p></li>
+<li><p><a href="~/Dropbox/github_repos/crossLag_p/crossLag/presentations/CLPM.pdf">SGPP
+Presentation, October 4, 2024</a></p></li>
+</ul>
 </div>
 </div>
 
